--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/AGGRG8_composite_key_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/AGGRG8_composite_key_impact.yaml
@@ -35,7 +35,9 @@ microbenchmark:
           - CREATE TABLE pkeyBigint1M_comp2keys_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1, col_bigint_id_2));
           - CREATE TABLE Indexed1M_comp2keys_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
           - CREATE INDEX ON Indexed1M_comp2keys_1(col_bigint_id_1, col_bigint_id_1);
-
+        cleanup:
+          - DROP TABLE IF EXISTS pkeyBigint1M_comp2keys_1;
+          - DROP TABLE IF EXISTS Indexed1M_comp2keys_1;
         loadRules:
               - table: pkeyBigint1M_comp2keys_
                 count: 1
