--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG3_projection_datatype_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG3_projection_datatype_impact.yaml
@@ -33,7 +33,8 @@ microbenchmark:
             - CREATE INDEX ON Indexed1M_1(col_varchar10_id_1 ASC);
             - CREATE INDEX ON Indexed1M_1(col_varchar500_id_1 ASC);
             - CREATE INDEX ON Indexed1M_1(col_float5_1 ASC);
-
+        cleanup:
+            - DROP TABLE IF EXISTS Indexed1M_1;
         loadRules:
               - table: Indexed1M_
                 count: 1
