--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG7_filter_condition_index_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG7_filter_condition_index_type_impact.yaml
@@ -1,12 +1,12 @@
-#TEST FOR POSTGRES
+#TEST FOR YUGABYTE REGULAR TABLES
 #GOAL7 Impact of index type on aggregation
 #TESTS:
 #Aggregate function count with 1 filter condition on non indexed column of bigint datatype
 #Aggregate function count  with 1 filter condition on pkey column of bigint datatype
 #Aggregate function count  with 1 filter condition on secondary indexed column of bigint datatype
-type: POSTGRES
-driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -29,13 +29,13 @@ microbenchmark:
             - DROP TABLE IF EXISTS pkeyBigint1M_1;
             - DROP TABLE IF EXISTS Indexed1M_1;
             - CREATE TABLE nonIndexed1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-            - CREATE TABLE pkeyBigint1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE TABLE pkeyBigint1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
             - CREATE TABLE Indexed1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-            - CREATE INDEX ON Indexed1M_1(col_bigint_id_1);
-            - CREATE INDEX ON Indexed1M_1(col_varchar10_id_1);
-            - CREATE INDEX ON Indexed1M_1(col_varchar500_id_1);
-            - CREATE INDEX ON Indexed1M_1(col_float5_1);
-
+            - CREATE INDEX ON Indexed1M_1(col_bigint_id_1 ASC);
+        cleanup:
+            - DROP TABLE IF EXISTS nonIndexed1M_1;
+            - DROP TABLE IF EXISTS pkeyBigint1M_1;
+            - DROP TABLE IF EXISTS Indexed1M_1;
         loadRules:
               - table: nonIndexed1M_
                 count: 1
@@ -145,19 +145,19 @@ microbenchmark:
         executeRules:
             - workload: AGGRG7_count_bigint_non_indexed_column_with_filter_condition
               run:
-                  - name: pg_count_bigint_non_indexed_column_with_filter_condition
+                  - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
                     queries:
                         - query: select count(col_bigint_id_1) from nonIndexed1M_1 where col_bigint_id_1>1
             - workload: AGGRG7_count_bigint_pkey_column_with_filter_condition
               run:
-                  - name: pg_count_bigint_non_indexed_column_with_filter_condition
+                  - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
                     queries:
                         - query: select count(col_bigint_id_1) from pkeyBigint1M_1 where col_bigint_id_1>1
             - workload: AGGRG7_count_bigint_secondary_indexed_column_with_filter_condition
               run:
-                  - name: pg_count_bigint_non_indexed_column_with_filter_condition
+                  - name: yb_count_bigint_non_indexed_column_with_filter_condition
                     weight: 100
                     queries:
                         - query: select count(col_bigint_id_1) from Indexed1M_1 where col_bigint_id_1>1
