--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG2_impact_of_increasing_row.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG2_impact_of_increasing_row.yaml
@@ -6,7 +6,7 @@
 #Aggregate function count on 10M rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
