--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG1_index_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG1_index_type_impact.yaml
@@ -6,7 +6,7 @@
 #Orderby clause on secondary indexed column of bigint datatype
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
