--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/AGGRG1_index_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/AGGRG1_index_type_impact.yaml
@@ -6,7 +6,7 @@
 #Aggregate function count on secondary indexed column of bigint datatype
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: {{username}}
 password: {{password}}
