--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG3_projection_datatype_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/AGGRG3_projection_datatype_impact.yaml
@@ -8,7 +8,7 @@
 #Aggregate function count on indexed varchar(500) column
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
