--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG4_impact_of_datatype_with_sec_ind.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG4_impact_of_datatype_with_sec_ind.yaml
@@ -7,7 +7,7 @@
 #Impact of orderby clause on SecIND of date datatype
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
