--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/ORDG2_index_filter_condition_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yb_colocated/ORDG2_index_filter_condition_type_impact.yaml
@@ -15,6 +15,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+use_dist_in_explain : true
 works:
     work:
         time_secs: 120
