--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG12_hash_merge_join.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG12_hash_merge_join.yaml
@@ -11,6 +11,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 batchsize: 128
 terminals: 1
 collect_pg_stat_statements: true
+use_dist_in_explain : true
 works:
     work:
         time_secs: 120
