--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG6_pkey_rangescan_halfTableScan_increasingColumn.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG6_pkey_rangescan_halfTableScan_increasingColumn.yaml
@@ -15,6 +15,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+use_dist_in_explain : true
 works:
     work:
         time_secs: 120
