--- a/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG4_impact_of_datatype_with_sec_ind.yaml
+++ b/config/yugabyte/regression_pipelines/aggregate_workloads/yugabyte/ORDG4_impact_of_datatype_with_sec_ind.yaml
@@ -30,14 +30,16 @@ microbenchmark:
           - DROP TABLE IF EXISTS indexedVarchar1001M_1;
           - DROP TABLE IF EXISTS indexedUuid1M_1;
           - DROP TABLE IF EXISTS indexedDate1M_1;
-          - CREATE TABLE indexedBigint1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-          - CREATE TABLE indexedVarchar1001M_1(col_varchar100_pid_1 varchar(100), col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-          - CREATE TABLE indexedUuid1M_1(col_uuid_id_1 uuid, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-          - CREATE TABLE indexedDate1M_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_date_id_1 date, col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500));
-          - CREATE INDEX ON indexedBigint1M_1(col_bigint_id_1 ASC);
+
+          - CREATE TABLE indexedBigint1M_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint,col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+          - CREATE TABLE indexedVarchar1001M_1(col_bigint_id_1 bigint, col_varchar100_pid_1 varchar(100), col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+          - CREATE TABLE indexedUuid1M_1(col_bigint_id_1 bigint, col_uuid_id_1 uuid, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+          - CREATE TABLE indexedDate1M_1(col_bigint_id_1 bigint, col_date_id_1 date, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+          - CREATE INDEX ON indexedBigint1M_1(col_bigint_id_2 ASC);
           - CREATE INDEX ON indexedVarchar1001M_1(col_varchar100_pid_1 ASC);
           - CREATE INDEX ON indexedUuid1M_1(col_uuid_id_1 ASC);
           - CREATE INDEX ON indexedDate1M_1(col_date_id_1 ASC);
+
         cleanup:
           - DROP TABLE IF EXISTS indexedBigint1M_1;
           - DROP TABLE IF EXISTS indexedVarchar1001M_1;
@@ -49,11 +51,11 @@ microbenchmark:
                 rows: 1000000
                 columns:
                     - name: col_bigint_id_
-                      count: 1
+                      count: 2
                       util: PrimaryIntGen
                       params: [ 1, 1000000 ]
                     - name: col_bigint_
-                      count: 5
+                      count: 4
                       util: RandomNumber
                       params: [ 1, 1000000 ]
                     - name: col_float2_
@@ -83,12 +85,16 @@ microbenchmark:
                 count: 1
                 rows: 1000000
                 columns:
+                    - name: col_bigint_id_
+                      count: 1
+                      util: PrimaryIntGen
+                      params: [ 1, 1000000 ]
                     - name: col_varchar100_pid_
                       count: 1
                       util: PrimaryStringGen
                       params: [1, 100]
                     - name: col_bigint_
-                      count: 5
+                      count: 4
                       util: RandomNumber
                       params: [ 1, 1000000 ]
                     - name: col_float2_
@@ -118,11 +124,15 @@ microbenchmark:
                 count: 1
                 rows: 1000000
                 columns:
+                    - name: col_bigint_id_
+                      count: 1
+                      util: PrimaryIntGen
+                      params: [ 1, 1000000 ]
                     - name: col_uuid_id_
                       count: 1
                       util: RandomUUID
                     - name: col_bigint_
-                      count: 5
+                      count: 4
                       util: RandomNumber
                       params: [ 1, 1000000 ]
                     - name: col_float2_
@@ -156,8 +166,12 @@ microbenchmark:
                       count: 1
                       util: PrimaryIntGen
                       params: [ 1, 1000000 ]
+                    - name: col_date_id_
+                      count: 1
+                      util: RandomDateBtwYears
+                      params: [1900, 2022]
                     - name: col_bigint_
-                      count: 5
+                      count: 4
                       util: RandomNumber
                       params: [ 1, 1000000 ]
                     - name: col_float2_
@@ -171,10 +185,10 @@ microbenchmark:
                     - name: col_boolean_
                       count: 1
                       util: RandomBoolean
-                    - name: col_date_id_
+                    - name: col_varchar10_id_
                       count: 1
-                      util: RandomDateBtwYears
-                      params: [1900, 2022]
+                      util: PrimaryStringGen
+                      params: [1, 10]
                     - name: col_varchar100_id_
                       count: 2
                       util: PrimaryStringGen
@@ -183,19 +197,20 @@ microbenchmark:
                       count: 1
                       util: PrimaryStringGen
                       params: [1, 500]
+
         executeRules:
             - workload: ORDG4_ordby_bigint_indexed_column
               run:
                   - name: yb_ordby_bigint_indexed_column
                     weight: 100
                     queries:
-                        - query: select col_bigint_id_1 from indexedBigint1M_1 order by col_bigint_id_1
+                        - query: select col_bigint_id_2 from indexedBigint1M_1 order by col_bigint_id_2
             - workload: ORDG4_ordby_varchar_indexed_column
               run:
                   - name: yb_ordby_varchar_indexed_column
                     weight: 100
                     queries:
-                        - query: select indexedVarchar1001M_1 from indexedVarchar1001M_1 order by indexedVarchar1001M_1
+                        - query: select col_varchar100_pid_1 from indexedVarchar1001M_1 order by col_varchar100_pid_1
             - workload: ORDG4_ordby_uuid_indexed_column
               run:
                   - name: yb_ordby_uuid_indexed_column
