--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -1,65 +1,56 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://localhost:5433/yugabyte?ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
-collect_pg_stat_statements: true
-terminals: 1
+terminals: 5
+collect_pg_stat_statements: false
 works:
     work:
-        time_secs: 5
-        active_terminals: 1
-        rate: 1000
+        active_terminals: 5
+        time_secs: 10
+        rate: unlimited
         warmup: 0
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
-        setAutoCommit : true
+        setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS demo100col;
-            - CREATE TABLE demo100col (id INT, col1 TEXT, primary key (id ASC)) ;
+            - drop table if exists update_test_table1;
+            - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
         loadRules:
-            -   table: demo100col
-                rows: 10
-                columns:
-                    -   name: id
-                        util: PrimaryIntGen
-                        params:
-                            - 1
-                            - 1000
-                    -   name: col1
-                        util: RandomStringNumeric
-                        params:
-                            - 128
+            - table: update_test_table1
+              rows: 1000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000]
+                  - name: col_int_
+                    count: 10
+                    util: RandomNumber
+                    params: [1, 1000]
+                  - name: col_varchar_
+                    count: 3
+                    util: RandomAString
+                    params: [20, 20]
+                  - name: col_date
+                    util: RandomAString
+                    params: [20, 20]
+                  - name: col_boolean
+                    util: RandomBoolean
         executeRules:
-            - workload: RangeScan1
+            - workload: update_same_key_from_multiple_threads
               run:
-                  -   name: ReadQuery1
-                      weight: 100
-                      queries:
-                          -   query: INSERT INTO demo100col VALUES(?,?)
-                              bindings:
-                                  - util: PrimaryIntGen
-                                    params:
-                                        - 10000
-                                        - 100000
-                                  - util: RandomAString
-                                    params:
-                                         - 5
-                                         - 5
-                  -   name: WriteQuery2
-                      weight: 50
-                      queries:
-                          -   query: UPDATE demo100col set col1 = ? where id = ?
-                              bindings:
-                                  -   util: RandomAString
-                                      params:
-                                          - 10
-                                          - 20
-                                  -   util: RandomNumber
-                                      params:
-                                          - 1
-                                          - 1000
+                  - name: update_same_key
+                    weight: 100
+                    queries:
+                        #- query: select * from update_test_table1 where id = 1 for update
+                        - query: update update_test_table1 set col_varchar_3 = ? where id > ?
+                          bindings:
+                              - util: RandomAString
+                                params: [20, 20]
+                              - util: PrimaryIntGen
+                                params: [1, 1000]
