--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+       <assembly.tarLongFileMode>posix</assembly.tarLongFileMode>
         <buildDirectory>${project.basedir}/target</buildDirectory>
     </properties>
 
