--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/1_index_load.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/1_index_load.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         workload: goal2-1_create_1_index_then_load
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 1
         filePath: orders.csv
         stringLength: 32
