--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_1_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_1_index.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         workload: goal2-2_load_then_backfill_1_index
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 1
         filePath: orders.csv
         stringLength: 32
