--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         workload: goal2-4_load_then_backfill_5_indexes
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 5
         filePath: orders.csv
         stringLength: 32
