--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
@@ -24,6 +24,6 @@ microbenchmark:
         workload: goal3-2_load_30Mrows
         tableName: orders
         columns: 15
-        rows: 30000000
+        rows: 3000
         filePath: orders.csv
         stringLength: 32
