--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/20_columns.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/20_columns.yaml
@@ -24,6 +24,6 @@ microbenchmark:
         workload: goal4-2_create_20fields_table_then_load
         tableName: orders
         columns: 20
-        rows: 3000000
+        rows: 300
         filePath: orders.csv
         stringLength: 32
