--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/1_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/1_index.yaml
@@ -22,7 +22,7 @@ microbenchmark:
         workload: goal1-2_create1index_load
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 1
         filePath: orders.csv
         stringLength: 32
