--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/5_indexes.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/5_indexes.yaml
@@ -21,7 +21,7 @@ microbenchmark:
         workload: goal1-3_create5index_load
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 5
         filePath: orders.csv
         stringLength: 32
