--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/5_index_load.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/5_index_load.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         workload: goal2-3_create_5_indexes_then_load
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 5
         filePath: orders.csv
         stringLength: 32
