--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
@@ -10,12 +10,8 @@ loaderthreads: 1
 terminals: 1
 works:
     work:
-        time_secs: 10
-        rate: 1000
-        weights: 100
-transactiontypes:
-    transactiontype:
-        name: FeatureBench
+        rate: unlimited
+        serial: true
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
     properties:
