--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/300M_rows.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/300M_rows.yaml
@@ -1,3 +1,4 @@
+
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
@@ -5,21 +6,20 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-collect_pg_stat_statements: true
+collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
-
 works:
     work:
         rate: unlimited
         serial: true
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3
     properties:
-        # Goal4 - 3 :: create table with 100 fields, 3M rows -> load data (only PK)
-        workload: create_100fields_table_then_load
+        # Goal3 - 3 :: create table with 15 fields -> load data for 300M rows (only PK)
+        workload: load_300Mrows
         tableName: orders
-        columns: 100
-        rows: 300
+        columns: 15
+        rows: 300000000
         filePath: orders.csv
         stringLength: 32
