--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/20_columns.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/20_columns.yaml
@@ -1,4 +1,3 @@
-
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
@@ -6,20 +5,21 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-collect_pg_stat_statements: true
+collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
+
 works:
     work:
         rate: unlimited
         serial: true
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4
     properties:
-        # Goal3 - 2 :: create table with 15 fields -> load data for 30M rows (only PK)
-        workload: load_30Mrows
+        # Goal4 - 2 :: create table with 20 fields, 3M rows -> load data (only PK)
+        workload: create_20fields_table_then_load
         tableName: orders
-        columns: 15
-        rows: 3000
+        columns: 20
+        rows: 3000000
         filePath: orders.csv
         stringLength: 32
