--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/1_index_load.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/1_index_load.yaml
@@ -5,7 +5,7 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-collect_pg_stat_statements: true
+collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
 works:
@@ -20,9 +20,10 @@ microbenchmark:
         workload: create_1_index_then_load
         tableName: orders
         columns: 15
-        rows: 300
+        rows: 3000000
         indexes: 1
         filePath: orders.csv
         stringLength: 32
         create_index_before_load: true
         create_index_after_load: false
+        recreateCsvIfExists: false
