--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
@@ -6,7 +6,7 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-collect_pg_stat_statements: true
+collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
 works:
@@ -16,10 +16,10 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3
     properties:
-        # Goal3 - 3 :: create table with 15 fields -> load data for 300M rows (only PK)
-        workload: load_300Mrows
+        # Goal3 - 2 :: create table with 15 fields -> load data for 30M rows (only PK)
+        workload: load_30Mrows
         tableName: orders
         columns: 15
-        rows: 30000
+        rows: 30000000
         filePath: orders.csv
         stringLength: 32
