--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/100_columns.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal4_varying_columns/100_columns.yaml
@@ -5,7 +5,7 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-collect_pg_stat_statements: true
+collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
 
@@ -16,10 +16,10 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4
     properties:
-        # Goal4 - 2 :: create table with 20 fields, 3M rows -> load data (only PK)
-        workload: create_20fields_table_then_load
+        # Goal4 - 3 :: create table with 100 fields, 3M rows -> load data (only PK)
+        workload: create_100fields_table_then_load
         tableName: orders
-        columns: 20
-        rows: 300
+        columns: 100
+        rows: 3000000
         filePath: orders.csv
         stringLength: 32
